<resources>
    <string name="app_name">Tebak Gambar Vtuber</string>
    <string name="exit_confirm">Apakah Anda Yakin Ingin Keluar?</string>
    <string name="isicredits">Aplikasi Ini Dibuat Untuk Memenuhi salah satu tugas dari mata kuliah Aplikasi Komputasi Bergerak</string>
    <string name="isiversion">Version : 0.9</string>
    <string name="options">Options</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="back">Back</string>
    <string name="persen">0%</string>
    <string name="yes">ya</string>
    <string name="no">tidak</string>
    <string name="credits">Credits</string>
    <string name="exit">exit</string>
    <string name="play">play</string>
    <string name="confirm_title">Konfirmasi</string>
</resources>